--- a/DesckCalcSH/DesckCalcSH.csproj
+++ b/DesckCalcSH/DesckCalcSH.csproj
@@ -67,6 +67,7 @@
 	</ItemGroup>
   
   <ItemGroup>
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
 		<PackageReference Include="Il2CppInterop.Runtime" Version="1.4.5" />
 		<PackageReference Include="LiveCharts" Version="0.9.7" />
 		<PackageReference Include="LiveChartsCore.SkiaSharpView.Maui" Version="2.0.0-beta.710" />
@@ -85,8 +86,11 @@
 	  <Compile Update="Pages\AboutPage.xaml.cs">
 	    <DependentUpon>AboutPage.xaml</DependentUpon>
 	  </Compile>
-	  <Compile Update="Pages\ViewModel.xaml.cs">
-	    <DependentUpon>ViewModel.xaml</DependentUpon>
+	  <Compile Update="Pages\CharView.xaml.cs">
+	    <DependentUpon>CharView.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="Pages\ChartViewModel.cs">
+	    <DependentUpon>%(Filename)</DependentUpon>
 	  </Compile>
 	  <Compile Update="Pages\ChartPage.xaml.cs">
 	    <DependentUpon>ChartPage.xaml</DependentUpon>
@@ -100,7 +104,7 @@
 	  <MauiXaml Update="Pages\AboutPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Pages\ViewModel.xaml">
+	  <MauiXaml Update="Pages\CharView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\ChartPage.xaml">
