add adout and load history

--- a/WebCalcServ/WebCalcServ/WebCalcServ.csproj
+++ b/WebCalcServ/WebCalcServ/WebCalcServ.csproj
@@ -16,7 +16,6 @@
     <Folder Include="wwwroot\css\" />
     <Folder Include="Models\lib\" />
     <Folder Include="Views\Graph\" />
-    <Folder Include="Content\" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\css\" />
@@ -25,57 +24,17 @@
     <None Remove="Models\lib\" />
     <None Remove="Views\Graph\" />
     <None Remove="Content\" />
-    <None Remove="Content\img\btns.png" />
-    <None Remove="Content\img\calcscreen.png" />
-    <None Remove="Content\img\calcscrenout.png" />
-    <None Remove="Content\img\chartscreen.png" />
-    <None Remove="Content\img\chartscreen2.png" />
-    <None Remove="Content\img\fnc2.png" />
-    <None Remove="Content\img\historyscreen.png" />
-    <None Remove="Content\img\historyscreen1.png" />
-    <None Remove="Content\img\historyscreen2.png" />
-    <None Remove="Content\img\menuscreen.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\Images\btns.png">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Include="Content\Images\calcscreen.png">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Include="Content\Images\calcscrenout.png">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Include="Content\Images\chartscreen.png">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Include="Content\Images\chartscreen2.png">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Include="Content\Images\fnc2.png">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Include="Content\Images\historyscreen.png">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Include="Content\Images\historyscreen1.png">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Include="Content\Images\historyscreen2.png">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Include="Content\Images\menuscreen.png">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
+    <None Include="wwwroot\img\btns.png" />
+    <None Include="wwwroot\img\calcscreen.png" />
+    <None Include="wwwroot\img\calcscrenout.png" />
+    <None Include="wwwroot\img\chartscreen.png" />
+    <None Include="wwwroot\img\chartscreen2.png" />
+    <None Include="wwwroot\img\fnc2.png" />
+    <None Include="wwwroot\img\historyscreen.png" />
+    <None Include="wwwroot\img\historyscreen1.png" />
+    <None Include="wwwroot\img\historyscreen2.png" />
+    <None Include="wwwroot\img\menuscreen.png" />
   </ItemGroup>
 </Project>
